--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "express-fileupload": "^1.4.0",
     "fs-extra": "^11.1.1",
     "morgan": "^1.10.0",
-    "mysql2": "^2.3.3"
+    "mysql2": "^2.3.3",
+    "react-router-dom": "^6.11.2"
   },
   "devDependencies": {
     "dotenv": "^16.0.3",
