--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chart.js": "^4.3.0",
     "cloudinary": "^1.36.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
