--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "fs-extra": "^11.1.1",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
-    "react-router-dom": "^6.11.2"
+    "react-responsive-carousel": "^3.2.23",
+    "react-router-dom": "^6.11.2",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "dotenv": "^16.0.3",
